adjusted market title again to ensure that it breaks down properly on mobile for certain titles which were acting strangely.

--- a/packages/augur-ui/src/modules/portfolio/components/common/market-row.styles.less
+++ b/packages/augur-ui/src/modules/portfolio/components/common/market-row.styles.less
@@ -4,6 +4,11 @@
   border-bottom: 1px solid @color-dark-grey;
   border-bottom-left-radius: @size-20;
   border-bottom-right-radius: @size-20;
+
+  @media @breakpoint-mobile {
+    border-bottom-left-radius: unset;
+    border-bottom-right-radius: unset;
+  }
 }
 
 .MarketRowContent {
@@ -61,6 +66,7 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
+        word-break: break-all;
 
         &:hover {
           text-decoration: underline;
